force-app/main/default/objects/dw_syteline_customer__x/dw_syteline_customer__x.object-meta.xml
<CustomObject>
    <description>dw_syteline$customer</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_syteline$customer</externalName>
    <label>dw_syteline$customer</label>
    <pluralLabel>dw_syteline$customer</pluralLabel>
</CustomObject>