force-app/main/default/objects/dw_syteline_customer__x/fields/active_for_data_integration__c.field-meta.xml
<CustomField>
    <fullName>active_for_data_integration__c</fullName>
    <description>active_for_data_integration</description>
    <externalDeveloperName>active_for_data_integration</externalDeveloperName>
    <label>active_for_data_integration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>