force-app/main/default/objects/dw_syteline_customer__x/fields/bank_cd__c.field-meta.xml
<CustomField>
    <fullName>bank_cd__c</fullName>
    <description>bank_cd</description>
    <externalDeveloperName>bank_cd</externalDeveloperName>
    <label>bank_cd</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>