force-app/main/default/objects/dw_syteline_customer__x/fields/create_dt__c.field-meta.xml
<CustomField>
    <fullName>create_dt__c</fullName>
    <description>create_dt</description>
    <externalDeveloperName>create_dt</externalDeveloperName>
    <label>create_dt</label>
    <type>DateTime</type>
</CustomField>