force-app/main/default/objects/dw_syteline_customer__x/fields/credit_partner__c.field-meta.xml
<CustomField>
    <fullName>credit_partner__c</fullName>
    <description>credit_partner</description>
    <externalDeveloperName>credit_partner</externalDeveloperName>
    <label>credit_partner</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>