force-app/main/default/objects/dw_syteline_customer__x/fields/cust_bank__c.field-meta.xml
<CustomField>
    <fullName>cust_bank__c</fullName>
    <description>cust_bank</description>
    <externalDeveloperName>cust_bank</externalDeveloperName>
    <label>cust_bank</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>