force-app/main/default/objects/dw_syteline_customer__x/fields/cust_type__c.field-meta.xml
<CustomField>
    <fullName>cust_type__c</fullName>
    <description>cust_type</description>
    <externalDeveloperName>cust_type</externalDeveloperName>
    <label>cust_type</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>