force-app/main/default/objects/dw_syteline_customer__x/fields/do_invoice__c.field-meta.xml
<CustomField>
    <fullName>do_invoice__c</fullName>
    <description>do_invoice</description>
    <externalDeveloperName>do_invoice</externalDeveloperName>
    <label>do_invoice</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>