force-app/main/default/objects/dw_syteline_customer__x/fields/export_type__c.field-meta.xml
<CustomField>
    <fullName>export_type__c</fullName>
    <description>export_type</description>
    <externalDeveloperName>export_type</externalDeveloperName>
    <label>export_type</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>