force-app/main/default/objects/dw_syteline_customer__x/fields/inv_category__c.field-meta.xml
<CustomField>
    <fullName>inv_category__c</fullName>
    <description>inv_category</description>
    <externalDeveloperName>inv_category</externalDeveloperName>
    <label>inv_category</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>