force-app/main/default/objects/dw_syteline_customer__x/fields/inv_freq__c.field-meta.xml
<CustomField>
    <fullName>inv_freq__c</fullName>
    <description>inv_freq</description>
    <externalDeveloperName>inv_freq</externalDeveloperName>
    <label>inv_freq</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>