force-app/main/default/objects/dw_syteline_customer__x/fields/lang_cd__c.field-meta.xml
<CustomField>
    <fullName>lang_cd__c</fullName>
    <description>lang_cd</description>
    <externalDeveloperName>lang_cd</externalDeveloperName>
    <label>lang_cd</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>