force-app/main/default/objects/dw_syteline_customer__x/fields/lcr_reqd__c.field-meta.xml
<CustomField>
    <fullName>lcr_reqd__c</fullName>
    <description>lcr_reqd</description>
    <externalDeveloperName>lcr_reqd</externalDeveloperName>
    <label>lcr_reqd</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>