force-app/main/default/objects/dw_syteline_customer__x/fields/number_of_employees__c.field-meta.xml
<CustomField>
    <fullName>number_of_employees__c</fullName>
    <description>number_of_employees</description>
    <externalDeveloperName>number_of_employees</externalDeveloperName>
    <label>number_of_employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>