force-app/main/default/objects/dw_syteline_customer__x/fields/order_bal__c.field-meta.xml
<CustomField>
    <fullName>order_bal__c</fullName>
    <description>order_bal</description>
    <externalDeveloperName>order_bal</externalDeveloperName>
    <label>order_bal</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>