force-app/main/default/objects/dw_syteline_customer__x/fields/pay_partner__c.field-meta.xml
<CustomField>
    <fullName>pay_partner__c</fullName>
    <description>pay_partner</description>
    <externalDeveloperName>pay_partner</externalDeveloperName>
    <label>pay_partner</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>