force-app/main/default/objects/dw_syteline_customer__x/fields/pay_type__c.field-meta.xml
<CustomField>
    <fullName>pay_type__c</fullName>
    <description>pay_type</description>
    <externalDeveloperName>pay_type</externalDeveloperName>
    <label>pay_type</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>