force-app/main/default/objects/dw_syteline_customer__x/fields/pay_vendor__c.field-meta.xml
<CustomField>
    <fullName>pay_vendor__c</fullName>
    <description>pay_vendor</description>
    <externalDeveloperName>pay_vendor</externalDeveloperName>
    <label>pay_vendor</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>