force-app/main/default/objects/dw_syteline_customer__x/fields/phone_nbr__c.field-meta.xml
<CustomField>
    <fullName>phone_nbr__c</fullName>
    <description>phone_nbr</description>
    <externalDeveloperName>phone_nbr</externalDeveloperName>
    <label>phone_nbr</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>