force-app/main/default/objects/dw_syteline_customer__x/fields/price_cd__c.field-meta.xml
<CustomField>
    <fullName>price_cd__c</fullName>
    <description>price_cd</description>
    <externalDeveloperName>price_cd</externalDeveloperName>
    <label>price_cd</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>