force-app/main/default/objects/dw_syteline_customer__x/fields/ship_early_ind__c.field-meta.xml
<CustomField>
    <fullName>ship_early_ind__c</fullName>
    <description>ship_early_ind</description>
    <externalDeveloperName>ship_early_ind</externalDeveloperName>
    <label>ship_early_ind</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>