force-app/main/default/objects/dw_syteline_customer__x/fields/ship_site__c.field-meta.xml
<CustomField>
    <fullName>ship_site__c</fullName>
    <description>ship_site</description>
    <externalDeveloperName>ship_site</externalDeveloperName>
    <label>ship_site</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>