force-app/main/default/objects/dw_syteline_customer__x/fields/show_in_ship_to_drop_down_list__c.field-meta.xml
<CustomField>
    <fullName>show_in_ship_to_drop_down_list__c</fullName>
    <description>show_in_ship_to_drop_down_list</description>
    <externalDeveloperName>show_in_ship_to_drop_down_list</externalDeveloperName>
    <label>show_in_ship_to_drop_down_list</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>