force-app/main/default/objects/dw_syteline_customer__x/fields/tax_cd_1__c.field-meta.xml
<CustomField>
    <fullName>tax_cd_1__c</fullName>
    <description>tax_cd_1</description>
    <externalDeveloperName>tax_cd_1</externalDeveloperName>
    <label>tax_cd_1</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>