force-app/main/default/objects/dw_syteline_customer__x/fields/updated_by__c.field-meta.xml
<CustomField>
    <fullName>updated_by__c</fullName>
    <description>updated_by</description>
    <externalDeveloperName>updated_by</externalDeveloperName>
    <label>updated_by</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>