force-app/main/default/objects/dw_syteline_customer__x/fields/wc_def_partner__c.field-meta.xml
<CustomField>
    <fullName>wc_def_partner__c</fullName>
    <description>wc_def_partner</description>
    <externalDeveloperName>wc_def_partner</externalDeveloperName>
    <label>wc_def_partner</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>